// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`popover default(bottom) style 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div>
      <span>
        Press me!
      </span>
    </div>
    <div
      class="container"
      style="width: 488px; top: 20px; left: 0px;"
    >
      <div
        class="arrowWrapper"
        style="bottom: 100%; left: 0px; transform: translateX(-50%) rotate(180deg);"
      >
        <div
          class="arrow arrow-d0"
        />
      </div>
      <div
        class="boxContainer"
      >
        <div
          class="textContent"
        >
          <span
            class="text"
          >
            Content
          </span>
        </div>
        <div
          class="closeButtonIcon"
        >
          <button
            aria-label="Cerrar"
            class="touchable"
            style="display: inline-block; vertical-align: middle; text-align: center; background-color: transparent; background-position: 50% 50%; background-size: 100% 100%; background-repeat: no-repeat; border: 0px; cursor: pointer; height: 24px; width: 24px;"
            type="button"
          >
            <svg
              height="24"
              role="presentation"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M17.788 6.212c.259.258.28.664.065.947l-.065.074L13.022 12l4.766 4.767a.722.722 0 01-.947 1.086l-.074-.065L12 13.022l-4.767 4.766a.722.722 0 01-1.086-.947l.065-.074L10.978 12 6.212 7.233a.722.722 0 01.947-1.086l.074.065L12 10.978l4.767-4.766a.722.722 0 011.021 0z"
                fill="#313235"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`popover left style 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div>
      <span>
        Press me!
      </span>
    </div>
    <div
      class="container"
      style="width: 488px; left: -508px; top: 0px; transform: translateY(-50%);"
    >
      <div
        class="arrowWrapper"
        style="left: 100%; top: 50%; transform: translateY(-100%) rotate(-90deg); transform-origin: bottom;"
      >
        <div
          class="arrow arrow-d0"
        />
      </div>
      <div
        class="boxContainer"
      >
        <div
          class="textContent"
        >
          <span
            class="text"
          >
            Content
          </span>
        </div>
        <div
          class="closeButtonIcon"
        >
          <button
            aria-label="Cerrar"
            class="touchable"
            style="display: inline-block; vertical-align: middle; text-align: center; background-color: transparent; background-position: 50% 50%; background-size: 100% 100%; background-repeat: no-repeat; border: 0px; cursor: pointer; height: 24px; width: 24px;"
            type="button"
          >
            <svg
              height="24"
              role="presentation"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M17.788 6.212c.259.258.28.664.065.947l-.065.074L13.022 12l4.766 4.767a.722.722 0 01-.947 1.086l-.074-.065L12 13.022l-4.767 4.766a.722.722 0 01-1.086-.947l.065-.074L10.978 12 6.212 7.233a.722.722 0 01.947-1.086l.074.065L12 10.978l4.767-4.766a.722.722 0 011.021 0z"
                fill="#313235"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`popover right style 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div>
      <span>
        Press me!
      </span>
    </div>
    <div
      class="container"
      style="width: 488px; left: 20px; top: 0px; transform: translateY(-50%);"
    >
      <div
        class="arrowWrapper"
        style="right: 100%; top: 50%; transform: translateY(-100%) rotate(90deg); transform-origin: bottom;"
      >
        <div
          class="arrow arrow-d0"
        />
      </div>
      <div
        class="boxContainer"
      >
        <div
          class="textContent"
        >
          <span
            class="text"
          >
            Content
          </span>
        </div>
        <div
          class="closeButtonIcon"
        >
          <button
            aria-label="Cerrar"
            class="touchable"
            style="display: inline-block; vertical-align: middle; text-align: center; background-color: transparent; background-position: 50% 50%; background-size: 100% 100%; background-repeat: no-repeat; border: 0px; cursor: pointer; height: 24px; width: 24px;"
            type="button"
          >
            <svg
              height="24"
              role="presentation"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M17.788 6.212c.259.258.28.664.065.947l-.065.074L13.022 12l4.766 4.767a.722.722 0 01-.947 1.086l-.074-.065L12 13.022l-4.767 4.766a.722.722 0 01-1.086-.947l.065-.074L10.978 12 6.212 7.233a.722.722 0 01.947-1.086l.074.065L12 10.978l4.767-4.766a.722.722 0 011.021 0z"
                fill="#313235"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`popover top style 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div>
      <span>
        Press me!
      </span>
    </div>
    <div
      class="container"
      style="width: 488px; transform: translateY(-100%); top: -20px; left: 0px;"
    >
      <div
        class="arrowWrapper"
        style="top: 100%; left: 0px; transform: translateX(-50%);"
      >
        <div
          class="arrow arrow-d0"
        />
      </div>
      <div
        class="boxContainer"
      >
        <div
          class="textContent"
        >
          <span
            class="text"
          >
            Content
          </span>
        </div>
        <div
          class="closeButtonIcon"
        >
          <button
            aria-label="Cerrar"
            class="touchable"
            style="display: inline-block; vertical-align: middle; text-align: center; background-color: transparent; background-position: 50% 50%; background-size: 100% 100%; background-repeat: no-repeat; border: 0px; cursor: pointer; height: 24px; width: 24px;"
            type="button"
          >
            <svg
              height="24"
              role="presentation"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M17.788 6.212c.259.258.28.664.065.947l-.065.074L13.022 12l4.766 4.767a.722.722 0 01-.947 1.086l-.074-.065L12 13.022l-4.767 4.766a.722.722 0 01-1.086-.947l.065-.074L10.978 12 6.212 7.233a.722.722 0 01.947-1.086l.074.065L12 10.978l4.767-4.766a.722.722 0 011.021 0z"
                fill="#313235"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
